# GlowOS

./: CMakeLists.txt  partitions.csv
components/glow_context/: CMakeLists.txt  glow_context.c
components/glow_context/include/: glow_context.h
components/glow_core/: CMakeLists.txt  glow_core.c
components/glow_core/include/: glow_core.h
components/glow_led/: CMakeLists.txt  glow_led.c
components/glow_led/include/: glow_led.h
components/glow_power/: CMakeLists.txt  glow_power.c
components/glow_power/include/: glow_power.h
components/glow_sensors/: CMakeLists.txt  glow_sensors.c
components/glow_sensors/include/: glow_sensors.h
components/glow_storage/: CMakeLists.txt  default.json  default_schema.json  glow_storage.c
components/glow_storage/include/: glow_storage.h
components/glow_web/: CMakeLists.txt  glow_web.c
components/glow_web/include/: glow_web.h
components/glow_web/web/: index.html
docs/: analysis.ipynb  measurement.csv  recover.py  requirements.txt
main/: CMakeLists.txt  main.c
